--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	"workspaces": [
 		"src/config",
 		"src/commands",
-		"src/events"
+		"src/events",
+		"src/functions"
 	],
 	"repository": {
 		"type": "git",
