You can pause the bot and resume it

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"src/config",
 		"src/commands",
 		"src/events",
-		"src/functions"
+		"src/functions",
+		"src/classes"
 	],
 	"repository": {
 		"type": "git",
