--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@discordjs/opus": "^0.5.3",
 		"@discordjs/rest": "^0.1.0-canary.0",
 		"@discordjs/voice": "^0.6.0",
+		"@types/redis": "^2.8.32",
 		"discord.js": "^13.2.0",
 		"dotenv": "^10.0.0",
 		"ffmpeg-static": "^4.4.0",
