/search is a thing!
Using /search gets you a list of results to pick from with emoji reactions. However, it only displays URLs. This will be improved.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
 		"strict": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"target": "ESNext",
+		"moduleResolution": "node"
 	}
 }
