--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@discordjs/opus": "^0.5.3",
 		"@discordjs/rest": "^0.1.0-canary.0",
 		"@discordjs/voice": "^0.6.0",
+		"@googleapis/youtube": "^2.0.0",
 		"@types/redis": "^2.8.32",
 		"cross-env": "^7.0.3",
 		"discord.js": "^13.2.0",
