--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"minimist": "^1.2.5",
 		"nodemon": "^2.0.13",
 		"redis": "^3.1.2",
+		"redis-rejson": "^1.0.0",
 		"ts-node": "^10.3.0",
 		"tweetnacl": "^1.0.3",
 		"typescript": "^4.4.3",
