--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"strict": true,
 		"esModuleInterop": true,
 		"target": "ESNext",
-		"module": "ESNext",
-		"moduleResolution": "node"
+		"moduleResolution": "node",
+		"module": "CommonJS"
 	}
 }
