--- a/src/botMessageComponentHandlers/package.json
+++ b/src/botMessageComponentHandlers/package.json
@@ -1,4 +1,4 @@
 {
-	"name": "bot-buttons",
+	"name": "bot-message-component-handlers",
 	"description": "A handler for interaction button presses."
 }
