Added VSCode debugger support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"target": "ESNext",
 		"moduleResolution": "node",
 		"module": "CommonJS",
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"sourceMap": true
 	}
 }
