--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "cross-env NODE_ENV=development nodemon src/index.ts",
 		"bot": "cross-env NODE_ENV=production ts-node src/index.ts -p tsconfig.build.json",
-		"test": "jest --forceExit --coverage"
+		"test": "jest --forceExit"
 	},
 	"workspaces": [
 		"src/config",
