--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"src/events",
 		"src/functions",
 		"src/classes",
-		"src/botMessageComponentHandlers"
+		"src/componenthandlers"
 	],
 	"repository": {
 		"type": "git",
