Cleaned up index

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
 			"protocol": "inspector",
 			"args": ["${workspaceRoot}/src/index.ts"],
 			"env": {
-				"NODE_ENV": "development"
+				"NODE_ENV": "development",
+				"REDIS_HOST": "localhost"
 			},
 			"cwd": "${workspaceRoot}",
 			"runtimeArgs": ["-r", "ts-node/register/transpile-only"],
