--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"moduleResolution": "node",
 		"module": "CommonJS",
 		"forceConsistentCasingInFileNames": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"experimentalDecorators": true
 	}
 }
