--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   redis:
     container_name: redis
-    image: redis
+    image: redislabs/rejson
     command: redis-server
     restart: always
 
