--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A Discord bot powered by Discord.js v13 and TypeScript for YouTube playback.",
 	"scripts": {
 		"dev": "cross-env NODE_ENV=development nodemon src/index.ts",
-		"bot": "cross-env NODE_ENV=production ts-node src/index.ts -p tsconfig.build.json",
+		"bot": "cross-env NODE_ENV=production ts-node src/index.ts -p tsconfig.builds.json",
 		"test": "jest --detectOpenHandles"
 	},
 	"workspaces": [
