--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"eslint": "^8.6.0",
 		"jest": "^27.4.7",
 		"nodemon": "^2.0.15",
+		"tiny-typed-emitter": "^2.1.0",
 		"ts-jest": "^27.1.2"
 	}
 }
