--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@typescript-eslint/parser": "^5.9.0",
 		"eslint": "^8.6.0",
 		"jest": "^27.4.7",
+		"jsdoc": "^3.6.7",
 		"nodemon": "^2.0.15",
 		"tiny-typed-emitter": "^2.1.0",
 		"ts-jest": "^27.1.2"
