--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A Discord bot powered by Discord.js v13 and TypeScript for YouTube playback.",
 	"scripts": {
 		"bot": "ts-node src/index.ts -p tsconfig.builds.json",
-		"dev": "cross-env NODE_ENV=development nodemon src/index.ts",
+		"dev": "cross-env NODE_ENV=development nodemon --exec './node_modules/.bin/ts-node' src/index.ts",
 		"test": "jest"
 	},
 	"workspaces": [
@@ -32,25 +32,26 @@
 		"@discordjs/voice": "^0.7.5",
 		"@googleapis/youtube": "^2.0.0",
 		"cross-env": "^7.0.3",
-		"discord.js": "^13.5.1",
+		"discord.js": "^13.6.0",
 		"dotenv": "^10.0.0",
-		"ffmpeg-static": "^4.4.0",
-		"redis": "^4.0.1",
-		"ts-node": "^10.4.0",
+		"ffmpeg-static": "^4.4.1",
+		"redis": "^4.0.6",
+		"ts-node": "^10.7.0",
 		"tweetnacl": "^1.0.3",
-		"typescript": "^4.5.4",
+		"typescript": "^4.6.3",
+		"ytdl-core": "^4.11.0",
 		"ytdl-core-discord": "^1.3.1"
 	},
 	"devDependencies": {
-		"@types/jest": "^27.0.2",
+		"@types/jest": "^27.4.1",
 		"@types/redis": "^2.8.32",
-		"@typescript-eslint/eslint-plugin": "^5.9.0",
-		"@typescript-eslint/parser": "^5.9.0",
-		"eslint": "^8.6.0",
-		"jest": "^27.4.7",
-		"jsdoc": "^3.6.7",
+		"@typescript-eslint/eslint-plugin": "^5.18.0",
+		"@typescript-eslint/parser": "^5.18.0",
+		"eslint": "^8.12.0",
+		"jest": "^27.5.1",
+		"jsdoc": "^3.6.10",
 		"nodemon": "^2.0.15",
 		"tiny-typed-emitter": "^2.1.0",
-		"ts-jest": "^27.1.2"
+		"ts-jest": "^27.1.4"
 	}
 }
