--- a/package.json
+++ b/package.json
@@ -7,13 +7,6 @@
 		"dev": "cross-env NODE_ENV=development nodemon --exec './node_modules/.bin/ts-node' src/index.ts",
 		"test": "jest"
 	},
-	"workspaces": [
-		"src/config",
-		"src/commands",
-		"src/events",
-		"src/functions",
-		"src/classes"
-	],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/jack3898/discord-youtube-bot-2.git"
@@ -36,6 +29,7 @@
 		"dotenv": "^10.0.0",
 		"ffmpeg-static": "^4.4.1",
 		"redis": "^4.0.6",
+		"soundcloud-downloader": "^1.0.0",
 		"ts-node": "^10.7.0",
 		"tweetnacl": "^1.0.3",
 		"typescript": "^4.6.3",
@@ -44,7 +38,7 @@
 	},
 	"devDependencies": {
 		"@types/jest": "^27.4.1",
-		"@types/redis": "^2.8.32",
+		"@types/redis": "^4.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.18.0",
 		"@typescript-eslint/parser": "^5.18.0",
 		"eslint": "^8.12.0",
