--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
 		"ts-node": "^10.7.0",
 		"tweetnacl": "^1.0.3",
 		"typescript": "^4.6.3",
-		"ytdl-core": "^4.11.0",
-		"ytdl-core-discord": "^1.3.1"
+		"ytdl-core": "4.10.0",
+		"ytdl-core-discord": "https://github.com/lenigmacedo/ytdl-core-discord.git"
 	},
 	"devDependencies": {
 		"@types/jest": "^27.4.1",
